# screenleak

./: .gitignore  .synth-allowlist  CATEGORIES.md  CHANGELOG.md  CITATION.bib  CONTRIBUTING.md  LICENSE-DATA  LIMITATIONS.md  METHODOLOGY.md  Makefile  README.md  ROADMAP.md  SECURITY.md  SOURCES.md  THREAT_MODEL.md  pyproject.toml
docs/: _config.yml  index.md
docs/_layouts/: default.html
docs/assets/: style.css
image/corpus/sample/: annotations_sample.jsonl
image/results/: leaderboard.md
image/src/: score.py
image/src/adapters/: _vision_common.py  claude.py  gcp_dlp.py  gemini.py  gemma4.py  gpt5.py  moondream.py  presidio_image.py  regex_ocr.py  rfdetr.py
results/: unified_leaderboard.md
scripts/: build_unified_leaderboard.py  pre_oss_check.sh
tests/: test_score.py  test_unified_leaderboard.py
text/data/: sample.jsonl
text/results/: leaderboard.md
text/src/: score.py
text/src/adapters/: _frontier_common.py  claude.py  gcp_dlp.py  gemini.py  gliner_pii.py  gpt5.py  gpt_oss.py  layered.py  opf_rs.py  presidio.py  privacy_filter.py  privacy_filter_ft.py  privacy_filter_ft_v2.py  privacy_filter_ft_v3.py  privacy_filter_ft_v4.py  privacy_filter_ft_v5.py  privacy_filter_ft_v6.py  regex.py
trace/data/: injected_sample.jsonl
trace/results/: leaderboard.md
trace/src/: replay.py  score.py
trace/src/adapters/: __init__.py  claude.py  gemini.py  gpt5.py
